--- a/app/src/main/res/layout/activity_detail_tv.xml
+++ b/app/src/main/res/layout/activity_detail_tv.xml
@@ -29,7 +29,7 @@
                 android:layout_weight="0.4">
 
                 <ImageView
-                    android:id="@+id/img_movie_thumb"
+                    android:id="@+id/img_tv_thumb"
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:contentDescription="@string/todo"
@@ -45,12 +45,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/lbl_movie_title"
+                    android:text="@string/lbl_tv_title"
                     android:textColor="@color/colorBluePrimaryDark"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/txt_movie_title"
+                    android:id="@+id/txt_tv_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_movie_title"
@@ -61,41 +61,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="@string/lbl_movie_year"
+                    android:text="@string/lbl_tv_year"
                     android:textColor="@color/colorBluePrimaryDark"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/txt_movie_year"
+                    android:id="@+id/txt_tv_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/txt_movie_title" />
+                    android:text="@string/txt_movie_year" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="@string/lbl_movie_director"
+                    android:text="@string/lbl_tv_stars"
                     android:textColor="@color/colorBluePrimaryDark"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/txt_movie_director"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_movie_director" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/lbl_movie_stars"
-                    android:textColor="@color/colorBluePrimaryDark"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/txt_movie_stars"
+                    android:id="@+id/txt_tv_stars"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_movie_stars" />
@@ -141,7 +127,7 @@
                         android:src="@drawable/poster_glass" />
 
                     <TextView
-                        android:id="@+id/txt_movie_title_1"
+                        android:id="@+id/txt_tv_title_1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_row="2"
@@ -149,7 +135,7 @@
                         android:gravity="center"
                         android:maxEms="7"
                         android:maxLines="1"
-                        android:text="@string/lbl_movie_title"
+                        android:text="@string/lbl_tv_title"
                         android:textStyle="bold" />
                 </GridLayout>
 
@@ -170,7 +156,7 @@
                         android:src="@drawable/poster_hunterkiller" />
 
                     <TextView
-                        android:id="@+id/txt_movie_title_2"
+                        android:id="@+id/txt_tv_title_2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_row="2"
@@ -178,7 +164,7 @@
                         android:gravity="center"
                         android:maxEms="7"
                         android:maxLines="1"
-                        android:text="@string/lbl_movie_title"
+                        android:text="@string/lbl_tv_title"
                         android:textStyle="bold" />
 
                 </GridLayout>
@@ -200,14 +186,14 @@
                         android:src="@drawable/poster_marrypopins" />
 
                     <TextView
-                        android:id="@+id/txt_movie_title_3"
+                        android:id="@+id/txt_tv_title_3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_row="2"
                         android:gravity="center"
                         android:maxEms="7"
                         android:maxLines="1"
-                        android:text="@string/lbl_movie_title"
+                        android:text="@string/lbl_tv_title"
                         android:textStyle="bold" />
                 </GridLayout>
             </LinearLayout>
@@ -218,7 +204,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/lbl_movie_overview"
+            android:text="@string/lbl_tv_overview"
             android:textColor="@color/colorBluePrimaryDark"
             android:textStyle="bold"
             android:layout_marginStart="5dp"
@@ -226,7 +212,7 @@
             app:layout_constraintTop_toBottomOf="@+id/layout_related_movies"/>
 
         <TextView
-            android:id="@+id/txt_movie_synopsis"
+            android:id="@+id/txt_tv_synopsis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -236,25 +222,25 @@
             />
 
         <TextView
-            android:id="@+id/lbl_movie_votes"
+            android:id="@+id/lbl_tv_votes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/lbl_movie_votes"
+            android:text="@string/lbl_tv_votes"
             android:layout_marginStart="5dp"
             android:textColor="@color/colorBluePrimaryDark"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_movie_synopsis"/>
+            app:layout_constraintTop_toBottomOf="@+id/txt_tv_synopsis"/>
 
         <TextView
-            android:id="@+id/txt_movie_votes"
+            android:id="@+id/txt_tv_votes"
             android:layout_width="18dp"
             android:layout_height="22dp"
             android:layout_marginStart="5dp"
             android:text="@string/txt_movie_votes"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_movie_votes" />
+            app:layout_constraintTop_toBottomOf="@+id/lbl_tv_votes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
