--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,57 +2,52 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="ButtonGeneral" parent="@style/Widget.AppCompat.Button.Colored">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
-    </style>
-
-
-
     <style name="TextContent" parent="@style/TextAppearance.AppCompat">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
     </style>
 
-    <style name="TextContent.Black">
-        <item name="android:textColor">@android:color/black</item>
+    <style name="LabelContent" parent="@style/TextAppearance.AppCompat">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
-    <style name="TextSpec">
+
+    <style name="LabelContent.Title">
+        <item name="android:textColor">@color/colorGreyDarker</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextContent.Title">
+        <item name="android:textColor">@color/colorBluePrimaryDark</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextContent.SubTitle">
+        <item name="android:textColor">@color/colorGreyDarker</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="TextSpec.Field">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">16dp</item>
+    <style name="TextContent.Field">
+        <item name="android:textColor">@color/colorGreyDarker</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="Subtitle" parent="@style/TextContent">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
+    <style name="TextContent.Field.GreyDark">
+        <item name="android:textColor">@color/colorGreyDarker</item>
     </style>
 
-    <style name="TextContent.Small">
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+    <style name="TextContent.Field.Grey">
+        <item name="android:textColor">@color/colorGreyDark</item>
     </style>
 
-    <style name="TextContent.Small.White">
-        <item name="android:textColor">@android:color/white</item>
-    </style>
+
+
 
 </resources>
