--- a/app/src/main/res/layout/activity_detail_tv.xml
+++ b/app/src/main/res/layout/activity_detail_tv.xml
@@ -1,246 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:id="@+id/frame_container"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DetailMovieActivity">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".DetailMovieActivity">
-
-        <LinearLayout
-            android:id="@+id/layout_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:dividerPadding="5dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.4">
-
-                <ImageView
-                    android:id="@+id/img_tv_thumb"
-                    android:layout_width="match_parent"
-                    android:layout_height="220dp"
-                    android:contentDescription="@string/todo"
-                    android:src="@drawable/poster_avengerinfinity" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.6"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lbl_tv_title"
-                    android:textColor="@color/colorBluePrimaryDark"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/txt_tv_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_movie_title"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/lbl_tv_year"
-                    android:textColor="@color/colorBluePrimaryDark"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/txt_tv_year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_movie_year" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/lbl_tv_stars"
-                    android:textColor="@color/colorBluePrimaryDark"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/txt_tv_stars"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_movie_stars" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <HorizontalScrollView
-            android:id="@+id/layout_related_movies"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fillViewport="true"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_header">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <GridLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp">
-
-                    <ImageView
-                        android:id="@+id/img_thumb_1"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_row="1"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/poster_glass" />
-
-                    <TextView
-                        android:id="@+id/txt_tv_title_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_row="2"
-                        android:foregroundGravity="center"
-                        android:gravity="center"
-                        android:maxEms="7"
-                        android:maxLines="1"
-                        android:text="@string/lbl_tv_title"
-                        android:textStyle="bold" />
-                </GridLayout>
-
-                <GridLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp">
-
-                    <ImageView
-                        android:id="@+id/img_thumb_2"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_row="1"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/poster_hunterkiller" />
-
-                    <TextView
-                        android:id="@+id/txt_tv_title_2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_row="2"
-                        android:foregroundGravity="center"
-                        android:gravity="center"
-                        android:maxEms="7"
-                        android:maxLines="1"
-                        android:text="@string/lbl_tv_title"
-                        android:textStyle="bold" />
-
-                </GridLayout>
-
-                <GridLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp">
-
-                    <ImageView
-                        android:id="@+id/img_thumb_3"
-                        android:layout_width="130dp"
-                        android:layout_height="125dp"
-                        android:layout_row="1"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/poster_marrypopins" />
-
-                    <TextView
-                        android:id="@+id/txt_tv_title_3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_row="2"
-                        android:gravity="center"
-                        android:maxEms="7"
-                        android:maxLines="1"
-                        android:text="@string/lbl_tv_title"
-                        android:textStyle="bold" />
-                </GridLayout>
-            </LinearLayout>
-        </HorizontalScrollView>
-
-        <TextView
-            android:id="@+id/lbl_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/lbl_tv_overview"
-            android:textColor="@color/colorBluePrimaryDark"
-            android:textStyle="bold"
-            android:layout_marginStart="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_related_movies"/>
-
-        <TextView
-            android:id="@+id/txt_tv_synopsis"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:text="@string/txt_movie_synopsis"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_overview"
-            />
-
-        <TextView
-            android:id="@+id/lbl_tv_votes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/lbl_tv_votes"
-            android:layout_marginStart="5dp"
-            android:textColor="@color/colorBluePrimaryDark"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_tv_synopsis"/>
-
-        <TextView
-            android:id="@+id/txt_tv_votes"
-            android:layout_width="18dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="5dp"
-            android:text="@string/txt_movie_votes"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_tv_votes" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    tools:context=".DetailTVActivity"
+    >
+</FrameLayout>
