--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -94,101 +94,17 @@
             android:fillViewport="true"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_header">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_detail_movie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <GridLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp">
-
-                    <ImageView
-                        android:id="@+id/img_thumb_1"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_row="1"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/poster_glass" />
-
-                    <TextView
-                        android:id="@+id/txt_movie_title_1"
-                        style="@style/LabelContent.Title"
-                        android:layout_row="2"
-                        android:foregroundGravity="center"
-                        android:gravity="center"
-                        android:maxEms="7"
-                        android:maxLines="1"
-                        android:text="@string/lbl_movie_title" />
-                </GridLayout>
-
-                <GridLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp">
-
-                    <ImageView
-                        android:id="@+id/img_thumb_2"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_row="1"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/poster_hunterkiller" />
-
-                    <TextView
-                        android:id="@+id/txt_movie_title_2"
-                        style="@style/LabelContent.Title"
-                        android:layout_row="2"
-                        android:foregroundGravity="center"
-                        android:gravity="center"
-                        android:maxEms="7"
-                        android:maxLines="1"
-                        android:text="@string/lbl_movie_title"/>
-
-                </GridLayout>
-
-                <GridLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp">
-
-                    <ImageView
-                        android:id="@+id/img_thumb_3"
-                        android:layout_width="130dp"
-                        android:layout_height="125dp"
-                        android:layout_row="1"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/poster_marrypopins" />
-
-                    <TextView
-                        android:id="@+id/txt_movie_title_3"
-                        style="@style/LabelContent.Title"
-                        android:layout_row="2"
-                        android:gravity="center"
-                        android:maxEms="7"
-                        android:maxLines="1"
-                        android:text="@string/lbl_movie_title"/>
-                </GridLayout>
-            </LinearLayout>
+                android:orientation="horizontal"
+                tools:listitem="@layout/item_list_detail_random" />
         </HorizontalScrollView>
 
         <TextView
