--- a/app/src/main/res/layout/fragment_detail_tvshow.xml
+++ b/app/src/main/res/layout/fragment_detail_tvshow.xml
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                tools:listitem="@layout/item_list_detail_tv" />
+                tools:listitem="@layout/item_list_detail_random" />
         </HorizontalScrollView>
 
         <TextView
@@ -144,8 +144,7 @@
 
         <TextView
             android:id="@+id/txt_tv_votes"
-            android:layout_width="18dp"
-            android:layout_height="22dp"
+            style="@style/TextContent.SubTitle"
             android:layout_marginStart="5dp"
             android:text="@string/txt_movie_votes"
             app:layout_constraintStart_toStartOf="parent"
